[package]
name = "hecate"
version = "0.87.0"
edition = "2018"
authors = ["ingalls <ingalls@protonmail.com>"]
license = "MIT"
description = "OpenStreetMap Inspired Data Storage Backend Focused on Performance and GeoJSON Interchange"

homepage = "https://github.com/mapbox/Hecate"
repository = "https://github.com/mapbox/Hecate"

readme = "README.md"

categories = ["database"]

[dependencies]
hecate_derive = { path = "../hecate_derive" }
futures = "0.3.5"
reqwest = "0.9.20"
tilecover = "1.1.1"
crossbeam = "0.7"
valico = "3.1"
rand = "0.7"
postgis = "0.6.0"
protobuf = "1.5"
base64 = "0.12"
bytes = "0.5"
actix-rt="1.1.1"
actix-threadpool = "0.3.2"
actix-web = "2.0.0"
actix-files = "0.2.2"
actix-http = "1.0.1"
actix-service = "1.0.5"
geojson = "0.16.0"
quick-xml = "0.18.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
r2d2 = "0.8.8"
r2d2_postgres = "0.16.0"
env_logger = "0.7"
hmac = "0.7"
url = "2.1"
sha2 = "0.8.0"
semver = "0.10.0"
lazy_static = "1.4.0"
approx = "0.3"

[dependencies.geo]
version = "0.12"
features = ["postgis-integration"]

[dependencies.postgres]
version = "0.17.0"
features = [
    "with-chrono-0_4",
    "with-serde_json-1"
]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.clap]
features = ["yaml"]
version = "2.33.0"

[[bin]]
name = "hecate"
doc = false
